--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My First Website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Hello, GitHub Pages!</h1>
+  <p>This is my first website hosted on GitHub.</p>
+  <button onclick="sayHi()">Click Me</button>
 
+  <script src="script.js"></script>
+</body>
+</html>
