--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My First Website</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing</title>
+
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, GitHub Pages!</h1>
-  <p>This is my first website hosted on GitHub.</p>
-  <button onclick="sayHi()">Click Me</button>
 
+  <h1>Hello, World!</h1>
+  <p>This is a basic HTML boilerplate.</p>
+
+  <!-- Link to external JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
