Added basic nav Story_example.html

--- a/Story_example.html
+++ b/Story_example.html
@@ -10,8 +10,16 @@
 </head>
 <body>
 
-  <h1>Hello, World!</h1>
-  <p>This is a basic HTML boilerplate.</p>
+  <nav>
+    <ul>
+      <li><a href="index.html">Landing</a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="story_example.html">Story Example</a></li>
+    </ul>
+  </nav>
+
+  <h1>Hello, World! Here's an filler story page</h1>
 
   <!-- Link to external JavaScript -->
   <script src="script.js"></script>
