--- a/home.html
+++ b/home.html
@@ -9,9 +9,16 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <nav>
+  <ul>
+    <li><a href="index.html">Landing</a></li>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="story_example.html">Story Example</a></li>
+  </ul>
+  </nav>
 
-  <h1>Hello, World!</h1>
-  <p>This is a basic HTML boilerplate.</p>
+  <h1>Hello, World! Here's a filler home page</h1>
 
   <!-- Link to external JavaScript -->
   <script src="script.js"></script>
