Fixed nav on contact.html

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="story_example.html">Story Example</a></li>
   </ul>
-  </na>
+  </nav>
 
   <h1>Hello, World! Here's a filler contact page</h1>
 
